# spbstu-room-booking

./: .env.example  .geminiignore  .gitignore  AUDIT_REPORT.md  BRANCH_PROTECTION_SETUP.md  CMakeLists.txt  DATA_QUALITY_REPORT.md  Dockerfile.test  GEMINI.md  GRAFANA_FILES_MANIFEST.txt  GRAFANA_PROVISIONING_SUMMARY.md  LOGGING_REPORT.md  Makefile  PERFORMANCE_REPORT.md  README.MD  SYSTEM_ARCHITECTURE.md  docker-compose.perf.yml  docker-compose.yml  generate_dashboards.py  manual-functional-tests.sh  pom.xml
.github/workflows/: ci.yml  ruz_importer.yml
Testing/: functional_test.sh  load_test_enhanced.js  stress_test.js
availability_engine/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile
availability_engine/log/: CMakeLists.txt  logger.cpp  logger.hpp
availability_engine/protos/: CMakeLists.txt
availability_engine/protos/room_service/: message.proto
availability_engine/src/: CMakeLists.txt
availability_engine/src/availability_engine/: CMakeLists.txt
availability_engine/src/availability_engine/include/: async_room_service.hpp  pqxx_pool.hpp
availability_engine/src/availability_engine/src/: async_room_service.cpp  main.cpp
availability_engine/src/common/: CMakeLists.txt
availability_engine/src/common/cache/: redis_async_client.cpp  redis_async_client.hpp
availability_engine/src/common/database/: postgreSQL_async_client.cpp  postgreSQL_async_client.hpp  postgreSQL_connection_pool.cpp  postgreSQL_connection_pool.hpp
availability_engine/src/common/messaging/: nats_async_client.cpp  nats_async_client.hpp
availability_engine/src/common/metrics/: MetricsRegistry.cpp  MetricsRegistry.h
availability_engine/src/ruz_importer/: CMakeLists.txt  sync_all_rooms.py  sync_all_rooms.py.bak  sync_rooms.py
availability_engine/src/ruz_importer/include/: config.hpp  data_processor.hpp  http_client.hpp  lesson.hpp  leti_parser.hpp  parser_factory.hpp  ruz_importer.hpp  spbgu_parser.hpp  spbptu_parser.hpp  university_parser.hpp
availability_engine/src/ruz_importer/src/: config.cpp  data_processor.cpp  http_client.cpp  leti_parser.cpp  main.cpp  ruz_importer.cpp  spbgu_parser.cpp  spbptu_parser.cpp  spbptu_parser.cpp.patch
availability_engine/tests/: CMakeLists.txt  test_availability_engine.cpp  test_nats_client.cpp  test_parsers.cpp  test_postgresql_async_client.cpp  test_postgresql_connection_pool.cpp  test_redis_async_client.cpp  test_ruz_importer.cpp  test_scheduling_algorithm.cpp
booking_API/: .dockerignore  Dockerfile  pom.xml
booking_API/src/main/proto/: room_service.proto
booking_API/src/main/resources/: application.yml  logback-spring.xml
booking_API/src/test/java/: RaceConditionTest.java
docs/: acceptance-test-plan-task9.md
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css  setupProxy.js
frontend/src/api/: auth.ts  bookings.ts  client.ts  rooms.ts  schedule.ts
frontend/src/components/BookingCard/: BookingCard.tsx
frontend/src/components/CancelBookingModal/: CancelBookingModal.tsx
frontend/src/components/DayTimeline/: DayTimeline.css  DayTimeline.tsx
frontend/src/components/EditBookingModal/: EditBookingModal.tsx
frontend/src/components/EmptyState/: EmptyState.tsx
frontend/src/components/Header/: Header.tsx
frontend/src/hooks/: useRoomSchedule.ts
frontend/src/pages/: AdminBookingsPage.tsx  AdminImportPage.tsx  BookingPage.tsx  HomePage.tsx  LoginPage.tsx  MyBookingsPage.tsx  RegisterPage.tsx  RoomsPage.tsx  SchedulePage.tsx
frontend/src/shared/: mockData.ts
frontend/src/store/: useAuthStore.ts
frontend/src/types/: index.ts
infrastructure/: .env.local  Makefile  docker-compose.yml
infrastructure/alertmanager/: .env.example  ARCHITECTURE_SUMMARY.md  DEPLOYMENT_GUIDE.md  README.md  alertmanager.yml  templates.tmpl
infrastructure/docs/: METRICS_INSTRUMENTATION.md
infrastructure/grafana/: Dockerfile  README_PROVISIONING.md
infrastructure/grafana/dashboards/: availability-engine.json  booking-api.json  infrastructure-nats.json  infrastructure-node-use.json  infrastructure-postgresql.json  services-red-method.json
infrastructure/nats/: Dockerfile  entrypoint.sh  init_streams.sh  nats.conf
infrastructure/nginx/: Dockerfile  nginx.conf
infrastructure/nginx/conf.d/: default.conf
infrastructure/postgreSQL/: Dockerfile  pg_hba.conf  postgresql.conf
infrastructure/postgreSQL/migrations/: 1_filling.sql  1_init.down.sql  1_init.up.sql  U000005__multi_university.sql  U000006__booking_saga_outbox_reliability.sql  V000004__db_audit_fixes.sql  V000005__multi_university.sql  V000006__booking_saga_outbox_reliability.sql  V000012__fix_schedules_import_no_rooms_lookup.sql  V000013__auto_populate_rooms_from_import.sql  V000014__sync_room_build.sql  V000015__add_indexes_for_availability.sql  V000016__add_gist_indexes_for_availability.sql  V000020__update_floor_and_capacity_heuristics.sql  V000021__add_cancellation_reason.sql  V000022__add_chain_id_to_bookings.sql
infrastructure/postgreSQL/scripts/: import_universities.sql
infrastructure/prometheus/: Dockerfile  alerting_rules.yml  prometheus.yml  recording_rules.yml
infrastructure/redis/: Dockerfile  redis.conf
infrastructure/scripts/: validate-grafana-provisioning.sh
log/: logger.cpp  logger.hpp
performance/: LOAD_TEST_REPORT_FINAL.md  LOAD_TEST_REPORT_STRUCTURED.md  k6-read-load-test.js  load-test.js  race-condition-check.js
protos/: CMakeLists.txt
protos/room_service/: message.proto
src/availability_engine/: CMakeLists.txt
src/availability_engine/include/: async_room_service.hpp
src/availability_engine/src/: async_room_service.cpp  main.cpp
src/common/: CMakeLists.txt
src/common/cache/: redis_async_client.cpp  redis_async_client.hpp
src/common/cahce/: redis_acync_client.hpp  redis_async_client.cpp
src/common/database/: postgreSQL_async_client.cpp  postgreSQL_async_client.hpp  postreSQL_async_clien.hpp
src/common/messaging/: nats_async_client.cpp  nats_async_client.hpp
src/main/proto/: room_service.proto
src/main/resources/: application.yml
(+136 files in other folders)
